feat: 路由及细节问题

--- a/vue-element-admin-i18n/public/index.html
+++ b/vue-element-admin-i18n/public/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>活动中心预约系统</title>
+    <script>
+      history.pushState = () => {}
+      history.go = () => {}
+      history.back = () => {}
+    </script>
   </head>
   <body>
     <div id="app"></div>
